--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="https://res.cloudinary.com/dxwzyjefd/image/upload/v1676843280/sprint4/24_r5wfr4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Kumbh+Sans:wght@400;700&display=swap"
